--- a/app/src/main/res/layout/item_roomplan_price.xml
+++ b/app/src/main/res/layout/item_roomplan_price.xml
@@ -37,7 +37,7 @@
             android:layout_marginStart="25dp"
             />
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -45,13 +45,86 @@
             android:layout_marginEnd="10dp"
             android:gravity="center">
 
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/g1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0."/>
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/g2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent=".11"/>
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/g3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent=".21"/>
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/g4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent=".31"/>
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/g5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent=".41"/>
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/g6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent=".51"/>
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/g7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent=".61"/>
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/g8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent=".71"/>
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/g9"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent=".81"/>
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/g10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent=".91"/>
+
             <TextView
 
                 style="@style/rateText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginStart="15dp"
+                app:layout_constraintStart_toStartOf="@id/g1"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_weight="0.2"
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
@@ -62,7 +135,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginStart="57dp"
+                app:layout_constraintStart_toStartOf="@id/g2"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_weight="0.2"
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
@@ -73,7 +148,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginStart="57dp"
+                app:layout_constraintStart_toStartOf="@id/g3"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_weight="0.2"
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
@@ -84,7 +161,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginStart="57dp"
+                app:layout_constraintStart_toStartOf="@id/g4"
+                app:layout_constraintTop_toTopOf="@id/g4"
                 android:layout_weight="0.2"
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
@@ -95,7 +173,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginStart="57dp"
+                app:layout_constraintStart_toStartOf="@id/g5"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_weight="0.2"
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
@@ -106,7 +186,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginStart="57dp"
+                app:layout_constraintStart_toStartOf="@id/g6"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_weight="0.2"
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
@@ -117,7 +199,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginStart="57dp"
+                app:layout_constraintStart_toStartOf="@id/g7"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_weight="0.2"
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
@@ -128,7 +212,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginStart="57dp"
+                app:layout_constraintStart_toStartOf="@id/g8"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_weight="0.2"
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
@@ -139,7 +225,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginStart="57dp"
+                app:layout_constraintStart_toStartOf="@id/g9"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_weight="0.2"
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
@@ -150,13 +238,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginStart="57dp"
+                app:layout_constraintStart_toStartOf="@id/g10"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_weight="0.2"
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
 
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     </LinearLayout>
