dialog_create_payment_type.xml, dialog_create_reservation_type.xml, dialog_create_season.xml

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -205,4 +205,8 @@
         <item name="android:windowExitAnimation">@anim/right_out_animation</item>
     </style>
 
+    <!-- Dialog Create Style -->
+    <dimen name="createDialogWidth"> 500dp </dimen>
+    <dimen name="createDialogHeight"> 380dp </dimen>
+
 </resources>
