--- a/app/src/main/res/layout/dialog_create_season.xml
+++ b/app/src/main/res/layout/dialog_create_season.xml
@@ -9,6 +9,7 @@
         android:layout_width="@dimen/createDialogWidth"
         style="@style/CardViewTheme"
         app:cardElevation="5dp"
+        app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="20dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -114,6 +115,7 @@
                                 android:textColor="@color/secondary"/>
 
                             <TextView
+                                android:id="@+id/from_date"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="--/--/----"
@@ -132,6 +134,7 @@
                                 android:textColor="@color/secondary"/>
 
                             <TextView
+                                android:id="@+id/to_date"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="--/--/----"
@@ -166,7 +169,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="All days"
-                        android:background="@drawable/rounded_selected_light"
+                        android:background="@drawable/rounded_border_light_black"
                         android:textSize="@dimen/H4"
                         android:layout_marginTop="15dp"
                         android:fontFamily="@font/roboto_medium"
@@ -180,6 +183,7 @@
                         android:orientation="horizontal">
 
                         <TextView
+                            android:id="@+id/monday"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:text="Mon"
@@ -192,6 +196,7 @@
                             android:textColor="@color/secondary" />
 
                         <TextView
+                            android:id="@+id/tuesday"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:text="Tue"
@@ -204,6 +209,7 @@
                             android:textColor="@color/secondary" />
 
                         <TextView
+                            android:id="@+id/wednesday"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:text="Wed"
@@ -216,6 +222,7 @@
                             android:textColor="@color/secondary" />
 
                         <TextView
+                            android:id="@+id/thursday"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:text="Thu"
@@ -228,6 +235,7 @@
                             android:textColor="@color/secondary" />
 
                         <TextView
+                            android:id="@+id/friday"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:text="Fri"
@@ -240,6 +248,7 @@
                             android:textColor="@color/secondary" />
 
                         <TextView
+                            android:id="@+id/saturday"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:text="Sat"
@@ -252,6 +261,7 @@
                             android:textColor="@color/secondary" />
 
                         <TextView
+                            android:id="@+id/sunday"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:text="Sun"
