--- a/app/src/main/res/layout/dialog_create_holiday.xml
+++ b/app/src/main/res/layout/dialog_create_holiday.xml
@@ -136,6 +136,7 @@
                                 android:textColor="@color/secondary"/>
 
                             <TextView
+                                android:id="@+id/from_date"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="--/--/----"
@@ -154,6 +155,7 @@
                                 android:textColor="@color/secondary"/>
 
                             <TextView
+                                android:id="@+id/to_date"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="--/--/----"
