--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -16,7 +16,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:background="#FFFFFF"
+            android:background="@color/primaryBackground"
             android:elevation="5dp"
             android:gravity="start"
             android:subtitleTextColor="@android:color/white"
@@ -541,7 +541,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
-                        android:visibility="visible"
+                        android:visibility="gone"
                         android:orientation="vertical">
 
                         <com.google.android.material.card.MaterialCardView
@@ -858,7 +858,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
-                        android:visibility="gone"
+                        android:visibility="visible"
                         android:orientation="vertical">
 
                         <com.google.android.material.card.MaterialCardView
@@ -954,6 +954,7 @@
                                     android:orientation="vertical"
                                     android:visibility="gone"
                                     app:layout_constraintTop_toBottomOf="@id/img_rate">
+
                                 <LinearLayout
                                     android:id="@+id/roomTypeCard"
                                     android:layout_width="match_parent"
@@ -1061,6 +1062,31 @@
                                     android:layout_marginStart="20dp"
                                     android:layout_marginTop="12dp"
                                     app:layout_constraintTop_toBottomOf="@id/ll4"
+                                    android:paddingStart="20dp"
+                                    android:orientation="horizontal"
+                                    android:gravity="center_vertical">
+                                    <ImageView
+                                        android:layout_width="30dp"
+                                        android:layout_height="30dp"
+                                        android:src="@drawable/svg_chart"
+                                        app:tint="@color/white"/>
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="Inclusion Plans"
+                                        android:fontFamily="@font/roboto_medium"
+                                        android:textColor="@color/white"
+                                        android:layout_marginStart="10dp"
+                                        android:textSize="@dimen/H4" />
+                                </LinearLayout>
+                                <LinearLayout
+                                    android:id="@+id/inclusionPlansLL"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:background="@color/black"
+                                    android:layout_marginStart="20dp"
+                                    android:layout_marginTop="12dp"
+                                    app:layout_constraintTop_toBottomOf="@id/ll5"
                                     android:paddingStart="20dp"
                                     android:orientation="horizontal"
                                     android:gravity="center_vertical">
@@ -1357,6 +1383,7 @@
                                         android:textSize="@dimen/H4" />
                                 </LinearLayout>
                                 <LinearLayout
+                                    android:id="@+id/identityDocumentsLL"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:background="@color/black"
