--- a/app/src/main/res/layout/dialog_create_season.xml
+++ b/app/src/main/res/layout/dialog_create_season.xml
@@ -172,8 +172,8 @@
                         android:background="@drawable/rounded_border_light_black"
                         android:textSize="@dimen/H4"
                         android:layout_marginTop="15dp"
-                        android:fontFamily="@font/roboto_medium"
-                        android:textColor="@color/secondary" />
+                        android:fontFamily="@font/roboto"
+                        android:textColor="@color/lightBlack" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -192,8 +192,8 @@
                             android:textSize="@dimen/H4"
                             android:layout_marginTop="15dp"
                             android:layout_marginHorizontal="5dp"
-                            android:fontFamily="@font/roboto_medium"
-                            android:textColor="@color/secondary" />
+                            android:fontFamily="@font/roboto"
+                            android:textColor="@color/lightBlack" />
 
                         <TextView
                             android:id="@+id/tuesday"
@@ -205,8 +205,8 @@
                             android:textSize="@dimen/H4"
                             android:layout_marginTop="15dp"
                             android:layout_marginHorizontal="5dp"
-                            android:fontFamily="@font/roboto_medium"
-                            android:textColor="@color/secondary" />
+                            android:fontFamily="@font/roboto"
+                            android:textColor="@color/lightBlack" />
 
                         <TextView
                             android:id="@+id/wednesday"
@@ -218,8 +218,8 @@
                             android:textSize="@dimen/H4"
                             android:layout_marginTop="15dp"
                             android:layout_marginHorizontal="5dp"
-                            android:fontFamily="@font/roboto_medium"
-                            android:textColor="@color/secondary" />
+                            android:fontFamily="@font/roboto"
+                            android:textColor="@color/lightBlack" />
 
                         <TextView
                             android:id="@+id/thursday"
@@ -231,8 +231,8 @@
                             android:textSize="@dimen/H4"
                             android:layout_marginTop="15dp"
                             android:layout_marginHorizontal="5dp"
-                            android:fontFamily="@font/roboto_medium"
-                            android:textColor="@color/secondary" />
+                            android:fontFamily="@font/roboto"
+                            android:textColor="@color/lightBlack" />
 
                         <TextView
                             android:id="@+id/friday"
@@ -244,8 +244,8 @@
                             android:textSize="@dimen/H4"
                             android:layout_marginTop="15dp"
                             android:layout_marginHorizontal="5dp"
-                            android:fontFamily="@font/roboto_medium"
-                            android:textColor="@color/secondary" />
+                            android:fontFamily="@font/roboto"
+                            android:textColor="@color/lightBlack" />
 
                         <TextView
                             android:id="@+id/saturday"
@@ -257,8 +257,8 @@
                             android:textSize="@dimen/H4"
                             android:layout_marginTop="15dp"
                             android:layout_marginHorizontal="5dp"
-                            android:fontFamily="@font/roboto_medium"
-                            android:textColor="@color/secondary" />
+                            android:fontFamily="@font/roboto"
+                            android:textColor="@color/lightBlack" />
 
                         <TextView
                             android:id="@+id/sunday"
@@ -270,8 +270,8 @@
                             android:textSize="@dimen/H4"
                             android:layout_marginTop="15dp"
                             android:layout_marginStart="5dp"
-                            android:fontFamily="@font/roboto_medium"
-                            android:textColor="@color/secondary" />
+                            android:fontFamily="@font/roboto"
+                            android:textColor="@color/lightBlack" />
 
                     </LinearLayout>
 
