--- a/app/src/main/res/layout/fragment_add_property.xml
+++ b/app/src/main/res/layout/fragment_add_property.xml
@@ -844,9 +844,11 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/addressLayoutF2"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginEnd="20dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@id/addressLayoutF1"
+            app:layout_constraintBottom_toBottomOf="@id/addressLayoutF1"
             app:layout_constraintEnd_toEndOf="parent">
 
             <TextView
@@ -863,10 +865,11 @@
             <fragment
                 android:id="@+id/map"
                 class="com.google.android.gms.maps.SupportMapFragment"
-                android:layout_width="400dp"
-                android:layout_height="250dp"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="25dp"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/aT2"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
