Code Clean up and layout issues solved.

--- a/app/src/main/res/layout/fragment_rate_policies.xml
+++ b/app/src/main/res/layout/fragment_rate_policies.xml
@@ -847,6 +847,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/sunday"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    android:background="@drawable/rounded_border_light_black"
                     android:layout_marginTop="16dp"
                     android:textSize="@dimen/H5"
                     android:textColor="@color/lightBlack"
@@ -858,7 +859,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toEndOf="@id/saturday"
                     app:layout_constraintEnd_toStartOf="@id/monday"
-                    android:background="@color/white"
+                    android:background="@drawable/rounded_border_light_black"
                     android:textAlignment="center"
                     android:gravity="center"
                     android:layout_marginTop="16dp"
@@ -874,6 +875,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toEndOf="@id/sunday"
                     app:layout_constraintEnd_toStartOf="@id/tuesday"
+                    android:background="@drawable/rounded_border_light_black"
                     android:layout_marginTop="16dp"
                     android:textSize="@dimen/H5"
                     android:textColor="@color/lightBlack"
@@ -887,6 +889,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toEndOf="@id/monday"
                     app:layout_constraintEnd_toStartOf="@id/wed"
+                    android:background="@drawable/rounded_border_light_black"
                     android:layout_marginTop="16dp"
                     android:textSize="@dimen/H5"
                     android:textColor="@color/lightBlack"
@@ -900,6 +903,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toEndOf="@id/tuesday"
                     app:layout_constraintEnd_toStartOf="@id/thursday"
+                    android:background="@drawable/rounded_border_light_black"
                     android:layout_marginTop="16dp"
                     android:textSize="@dimen/H5"
                     android:textColor="@color/lightBlack"
@@ -913,6 +917,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toEndOf="@id/wed"
                     app:layout_constraintEnd_toStartOf="@id/fri"
+                    android:background="@drawable/rounded_border_light_black"
                     android:layout_marginTop="16dp"
                     android:textSize="@dimen/H5"
                     android:textColor="@color/lightBlack"
@@ -926,6 +931,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toEndOf="@id/thursday"
                     app:layout_constraintEnd_toEndOf="parent"
+                    android:background="@drawable/rounded_border_light_black"
                     android:layout_marginTop="16dp"
                     android:textSize="@dimen/H5"
                     android:textColor="@color/lightBlack"
