--- a/app/src/main/res/layout/fragment_view_company.xml
+++ b/app/src/main/res/layout/fragment_view_company.xml
@@ -1,14 +1,164 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".dashboard.configuration.CorporateRates.ViewCompany.ViewCompanyFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:background="@color/secondaryBackground">
 
-</FrameLayout>
+        <TextView
+            android:id="@+id/addPropertyHeading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/secondary"
+            android:text="Company Name"
+            android:textSize="@dimen/H2"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="20dp"
+            android:fontFamily="@font/roboto_bold"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <TextView
+            android:id="@+id/cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cancel"
+            android:layout_gravity="center"
+            android:fontFamily="@font/roboto_bold"
+            android:textSize="@dimen/H5"
+            android:padding="15dp"
+            android:layout_marginEnd="20dp"
+            android:textColor="@color/black"
+            app:layout_constraintBottom_toBottomOf="@id/continueBtn"
+            app:layout_constraintTop_toTopOf="@id/continueBtn"
+            app:layout_constraintEnd_toStartOf="@id/continueBtn"/>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/continueBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_marginEnd="20dp"
+            android:clickable="true"
+            android:backgroundTint="@color/black"
+            app:cardCornerRadius="10dp"
+            android:focusable="true"
+            app:layout_constraintBottom_toBottomOf="@id/addPropertyHeading"
+            app:layout_constraintTop_toTopOf="@id/addPropertyHeading"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <TextView
+                android:id="@+id/buttonTxt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Next"
+                android:textAlignment="center"
+                android:layout_gravity="center"
+                android:fontFamily="@font/roboto_bold"
+                android:textSize="@dimen/H5"
+                android:layout_marginHorizontal="30dp"
+                android:textColor="@color/white"/>
+
+        </androidx.cardview.widget.CardView>
+
+        <LinearLayout
+            android:id="@+id/ll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="4"
+            android:background="@color/secondaryBackground"
+            android:layout_marginHorizontal="20dp"
+            app:layout_constraintTop_toBottomOf="@id/cancel"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <TextView
+                android:id="@+id/companyDetailsFrag"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/secondary"
+                android:text="Company Details"
+                android:textAlignment="center"
+                android:textSize="@dimen/H3"
+                android:paddingVertical="10dp"
+                android:background="@drawable/corner_top_white_background"
+                android:layout_weight="1"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/roboto_medium"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <TextView
+                android:id="@+id/stayHistory"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/secondary"
+                android:text="Stay History"
+                android:textAlignment="center"
+                android:background="@drawable/corner_top_grey_background"
+                android:layout_weight="1"
+                android:textSize="@dimen/H5"
+                android:paddingVertical="10dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/roboto"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <TextView
+                android:id="@+id/companyLedger"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/secondary"
+                android:text="Company Ledger"
+                android:textAlignment="center"
+                android:background="@drawable/corner_top_grey_background"
+                android:layout_weight="1"
+                android:textSize="@dimen/H5"
+                android:paddingVertical="10dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/roboto"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <TextView
+                android:id="@+id/contractDetailsFag"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/lightBlack"
+                android:text="Contract Details"
+                android:textAlignment="center"
+                android:background="@drawable/corner_top_grey_background"
+                android:layout_weight="1"
+                android:textSize="@dimen/H5"
+                android:paddingVertical="10dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/roboto"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+        </LinearLayout>
+
+        <FrameLayout
+            android:id="@+id/viewCompanyFragContainer"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/corner_bottom_white_background"
+            app:layout_constraintStart_toStartOf="@id/ll"
+            app:layout_constraintEnd_toEndOf="@id/ll"
+            app:layout_constraintTop_toBottomOf="@id/ll"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</LinearLayout>
